[package]
name = "fubuki"
version = "0.1.0"
authors = ["Kot <33439542+kotx@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
futures = "^0.3"

serde = "^1"
toml = "^0.5"

twilight-model = "^0.4"
twilight-http = "^0.4"
twilight-gateway = "^0.4"
twilight-embed-builder = "^0.5"

roux = "^1.3"
rand = "^0.8"
regex = "^1.5"
